<resources>
    <string name="app_name">Currency Demo</string>

    <!--  Demo Button  -->
    <string name="btn_clear_data">Clear Data</string>
    <string name="btn_add_crypto">Add Cryptos</string>
    <string name="btn_add_fiat">Add Fiats</string>
    <string name="btn_add_new">Add New</string>

    <!--  EditText Hints  -->
    <string name="hint_currency_id">ID</string>
    <string name="hint_currency_name">Name</string>
    <string name="hint_currency_symbol">Symbol</string>
    <string name="hint_currency_code">Code (Optional)</string>

    <!--  Empty State  -->
    <string name="currency_not_found_title">No Results</string>
    <string name="currency_not_found_description">Try adding more currencies or search for other key words</string>

    <!--  Error  -->
    <string name="validation_error_message">Invalid input. Please check your entries and try again</string>
    <string name="general_error_message">Oops something went wrong\n%1$s</string>

    <!--  Success Message  -->
    <string name="clear_data_success">Successfully cleared all saved data!</string>
    <string name="add_custom_currency_success">Successfully added new currency!</string>

    <!--  Menu  -->
    <string name="search_currency_title">Search</string>
</resources>